[gd_scene load_steps=6 format=3 uid="uid://blqhnpkoh1ci"]

[ext_resource type="Script" path="res://scripts/missle.gd" id="1_k2rlx"]
[ext_resource type="Texture2D" uid="uid://dc8n2kkj4cyti" path="res://sprites/dagger.png" id="2_6mpj5"]
[ext_resource type="PackedScene" uid="uid://dsdts71tmlke5" path="res://scenes/damage_zone.tscn" id="3_m71de"]
[ext_resource type="AudioStream" uid="uid://bc734glkul2dn" path="res://sounds/weapon/521242__cyoung510__arrow_hits_target.wav" id="4_hcfk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njdt2"]
size = Vector2(87, 32)

[node name="FlyingDagger" type="Node2D"]
script = ExtResource("1_k2rlx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6mpj5")

[node name="damage_zone" parent="." node_paths=PackedStringArray("sound") instance=ExtResource("3_m71de")]
monitoring = true
damage = 1.0
sound = NodePath("../arrow_hit")
aoe = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_zone"]
position = Vector2(14.5, 2)
shape = SubResource("RectangleShape2D_njdt2")

[node name="arrow_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hcfk6")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="hit" from="damage_zone" to="." method="_on_damage_zone_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
